[package]
name = "quinn-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = "0.12"
quinn-plaintext = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[patch.crates-io]
quinn = { git = "https://github.com/efagerho/quinn", branch = "main" }
quinn-proto = { git = "https://github.com/efagerho/quinn", branch = "main" }
quinn-udp = { git = "https://github.com/efagerho/quinn", branch = "main" }
quinn-plaintext = { path = "quinn-plaintext" }
