[package]
name = "quinn-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = "0.12"
quinn-plaintext = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
mimalloc = "0.1"

[profile.release]
debug = true

[patch.crates-io]
quinn = { path = "quinn/quinn" }
quinn-proto = { path = "quinn/quinn-proto" }
quinn-udp = { path = "quinn/quinn-udp" }
quinn-plaintext = { path = "quinn-plaintext" }
